# stable-diffusion-webui-codex

./: .gitignore  AGENTS.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  gitignore.md  install-webui.ps1  install-webui.sh  pyproject.toml  run-webui.sh  update-webui.bat  update-webui.sh
apps/: AGENTS.md  docker_tui_launcher.py  paths.json
apps/backend/core/: AGENTS.md  engine_interface.py  engine_loader.py  orchestrator.py  registry.py  requests.py  rng.py  state.py
apps/backend/core/contracts/: AGENTS.md  asset_requirements.py  text_encoder_slots.py
apps/backend/engines/: AGENTS.md  __init__.py  registration.py
apps/backend/engines/anima/: AGENTS.md  anima.py  spec.py
apps/backend/engines/common/: AGENTS.md  base.py  base_video.py
apps/backend/engines/flux/: AGENTS.md  chroma.py  flux.py  spec.py
apps/backend/engines/flux2/: AGENTS.md  __init__.py  factory.py  flux2.py  img2img.py  spec.py
apps/backend/engines/ltx2/: AGENTS.md  __init__.py  factory.py  ltx2.py  spec.py
apps/backend/engines/netflix_void/: AGENTS.md  __init__.py  factory.py  netflix_void.py  spec.py
apps/backend/engines/qwen_image/: AGENTS.md  __init__.py  qwen_image.py
apps/backend/engines/sd/: AGENTS.md  classic_base.py  sd35.py  sdxl.py  spec.py
apps/backend/engines/util/: AGENTS.md  adapters.py  attention_backend.py  schedulers.py
apps/backend/engines/wan22/: AGENTS.md  wan22_14b.py  wan22_14b_animate.py  wan22_5b.py
apps/backend/engines/zimage/: AGENTS.md  spec.py  standalone_sampler.py  zimage.py
apps/backend/engines/zimage_l2p/: AGENTS.md  __init__.py  factory.py  spec.py  standalone_sampler.py  zimage_l2p.py
apps/backend/huggingface/: AGENTS.md  assets.py
apps/backend/huggingface/Qwen/: AGENTS.md
apps/backend/huggingface/zhen-nan/: AGENTS.md
apps/backend/infra/: AGENTS.md
apps/backend/infra/config/: AGENTS.md  args.py  lora_apply_mode.py  paths.py
apps/backend/infra/registry/: AGENTS.md  __init__.py  base.py  text_encoder_roots.py
apps/backend/interfaces/: AGENTS.md
apps/backend/interfaces/api/: AGENTS.md  dependency_checks.py  device_selection.py  public_errors.py  run_api.py  serializers.py  task_registry.py  wan_video_request_keys.py
apps/backend/interfaces/schemas/: AGENTS.md  settings_registry.py  settings_schema.json
apps/backend/inventory/: AGENTS.md  cache.py
apps/backend/inventory/scanners/: AGENTS.md  ip_adapter.py  loras.py  text_encoders.py  vaes.py
apps/backend/patchers/: AGENTS.md  base.py  denoiser.py  lora_apply.py  lora_loader.py  lora_merge.py  unet.py  vae.py
apps/backend/patchers/controlnet/: AGENTS.md  __init__.py  apply.py  base.py  weighting.py
apps/backend/quantization/: AGENTS.md  api.py  core.py  gguf_loader.py
apps/backend/quantization/gguf/: AGENTS.md  __init__.py  reader.py  writer.py
apps/backend/quantization/kernels/: quantize_numpy.py
apps/backend/runtime/: AGENTS.md  errors.py  live_preview.py  load_authority.py  logging.py  utils.py
apps/backend/runtime/adapters/: AGENTS.md
apps/backend/runtime/attention/: AGENTS.md  __init__.py
apps/backend/runtime/checkpoint/: AGENTS.md  io.py  safetensors_header.py
apps/backend/runtime/common/: AGENTS.md  vae.py  vae_codex3d.py  vae_lane_policy.py  vae_ldm.py  vae_tiled.py
apps/backend/runtime/controlnet/: AGENTS.md  config.py  runtime.py
apps/backend/runtime/diagnostics/: AGENTS.md  call_trace.py  contract_trace.py  error_summary.py  pipeline_debug.py  profiler.py  timeline.py  trace.py
apps/backend/runtime/families/: AGENTS.md  __init__.py
apps/backend/runtime/kernels/: AGENTS.md
apps/backend/runtime/memory/: AGENTS.md  manager.py  memory_management.py  smart_offload.py  smart_offload_invariants.py  stream.py
apps/backend/runtime/misc/: sub_quadratic_attention.py
apps/backend/runtime/model_parser/: AGENTS.md  plan.py  quantization.py  specs.py
apps/backend/runtime/model_registry/: AGENTS.md  (+6 more)
apps/backend/services/: AGENTS.md  live_preview_service.py  model_catalog.py  options_store.py  output_service.py
apps/backend/types/: AGENTS.md  payloads.py  samplers.py
apps/backend/use_cases/: AGENTS.md  _image_streaming.py  _video_streaming.py  image_automation.py  img2img.py  img2vid.py  txt2img.py  txt2vid.py  vid2vid.py
apps/interface/: AGENTS.md  README.md  blocks.json  package-lock.json  package.json  presets.json  vite.config.ts
apps/interface/src/: AGENTS.md  App.vue  styles.css
apps/interface/tools/: AGENTS.md  css-contracts.config.json  port-guard-dev.mjs  style-topology.mjs  verify-css-contracts.mjs
apps/launcher/: AGENTS.md  __init__.py  api_args.py  checks.py  ports.py  profile_defaults.py  profile_meta.py  profile_store.py  profiles.py  service_env.py  service_modes.py  service_process.py  service_specs.py  services.py  setting_registry.py  settings.py
apps/launcher/gui_tk/: AGENTS.md  app.py  controller.py  form_renderer.py  form_schema.py  styles.py  tab_registry.py
(+441 files in other folders)
